--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "medicationReminder_portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jpke.github.io/medicationReminder_portfolio",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.8.4"
   },
   "dependencies": {
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
